--- a/MAD Project/app/src/main/res/layout/activity_main.xml
+++ b/MAD Project/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/welcome_text"
         android:layout_centerHorizontal="true"
-        android:text="Get started now"
+        android:text="Get Started Now"
         android:textSize="25sp"
         android:textColor="#FFFF" />
 
